Fixed z-index weird behavior.

--- a/src/pages/become-an-affiliate/become-an-affiliate.css
+++ b/src/pages/become-an-affiliate/become-an-affiliate.css
@@ -1,9 +1,8 @@
 .form.affiliate-form {
-    background-color: var(--bg-primary);
+    background: none;
     width: 80%;
     align-self: center;
     box-shadow: none;
-    z-index: -10;
 }
 
 .affiliate-form__title {
